--- a/DesignerRHN/DesignerRHN-war/web/EmplMvrs.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplMvrs.xhtml
@@ -160,7 +160,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 320px; margin: -14px; height: 26px;  border: none; color: blue" id="fooMotivo" value=""/>
+                                        <p:commandButton style="width: 320px; margin: -14px; height: 26px;  border: none; color: blue" action="motivomvr" id="fooMotivo" actionListener="#{controlMotivosMvrs.recibirPaginaAnterior('atrasmotivomvr')}"  value=""/>
                                     </f:facet>
                                 </p:column>
 
@@ -293,7 +293,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 250px; margin: -14px; height: 26px;  border: none; color: blue" id="fooCertificadosOC" value=""/>
+                                        <p:commandButton style="width: 250px; margin: -14px; height: 26px;  border: none; color: blue" action="tipocertificado" actionListener="#{controlTiposCertificados.recibirPagina('atrastipocertificado')}" id="fooCertificadosOC" value=""/>
                                     </f:facet>
                                 </p:column>
 
