--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
@@ -165,7 +165,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue" id="fooMotivo" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue" id="fooMotivo" action="motivolocalizacion" value=""/>
                                     </f:facet>
                                 </p:column>
 
