--- a/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
@@ -323,7 +323,7 @@
                                         </f:facet>   
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 120px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoEmpresa"  value=" "/>
+                                        <p:commandButton style="width: 120px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoEmpresa" action="tipoempresa"  value=" "/>
                                     </f:facet>
                                 </p:column>
 
