--- a/DesignerRHN/DesignerRHN-war/web/detalleconcepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/detalleconcepto.xhtml
@@ -95,7 +95,7 @@
                                                 </f:facet>  
                                             </p:cellEditor>
                                             <f:facet name="footer">
-                                                <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoCC" value=" "/>
+                                                <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoCC" action="tiposcentroscostosdetalleconcepto" actionListener="#{controlTiposCentrosCostos.recibirPaginaAnterior('atrastiposcentroscostosdetalleconcepto')}" value=" "/>
                                             </f:facet>
                                         </p:column>
 
