--- a/DesignerRHN/DesignerRHN-war/web/emplvigenciaindicador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigenciaindicador.xhtml
@@ -142,7 +142,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue"  value=" "/>
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" action="tipoindicador" value=" "/>
                                     </f:facet>
                                 </p:column>
 
