--- a/DesignerRHN/DesignerRHN-war/web/historiaformula.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/historiaformula.xhtml
@@ -108,7 +108,7 @@
                         <p:tooltip style="font-size: 12px" for="OPERANDOS" value="Visualizar Operandos." />
                         <p:commandButton style="position: absolute; left: 120px; top: 520px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="CAMBIOANUAL" value="[Cambio Anual]" process="@this" />
                         <p:tooltip style="font-size: 12px" for="CAMBIOANUAL" value="Visualizar Operandos." />
-                        <p:commandButton style="position: absolute; left: 235px; top: 520px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="VALORESUNIT" value="[Valores Unit. Concep..]" process="@this" />
+                        <p:commandButton style="position: absolute; left: 235px; top: 520px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="VALORESUNIT" value="[Valores Unit. Concep..]" action="valoresconceptos" process="@this" />
                         <p:tooltip style="font-size: 12px" for="VALORESUNIT" value="Visualizar Operandos." />
                         <p:separator style="position: absolute; left: 400px; top: 510px;width: 2px; height: 30px;"  /> 
                         <p:commandButton style="position: absolute; left: 415px; top: 520px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlHistoriaFormula.cancelarModificacion()}" process="@this" />
