--- a/DesignerRHN/DesignerRHN-war/web/proceso.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/proceso.xhtml
@@ -79,7 +79,7 @@
                                         </f:facet>   
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 350px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoPago" value=" " />
+                                        <p:commandButton style="width: 350px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoPago" action="tipopago" value=" " />
                                     </f:facet>
                                 </p:column>
 
