--- a/DesignerRHN/DesignerRHN-war/web/unidad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/unidad.xhtml
@@ -131,7 +131,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 315px; margin: -14px; height: 26px; border: none; color: blue" value=" " id="fooTiposUnidades" action="tipounidad" actionListener="#{controlTiposUnidades.recibirPaginaEntrante('unidad')}"/>
+                                        <p:commandButton style="width: 315px; margin: -14px; height: 26px; border: none; color: blue" value=" " id="fooTiposUnidades" action="tipounidad" actionListener="#{controlTiposUnidades.recibirPaginaEntrante('atrastipounidad')}"/>
                                     </f:facet>
                                 </p:column>
                             </p:dataTable>
