--- a/DesignerRHN/DesignerRHN-war/web/gersaludocupacional.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/gersaludocupacional.xhtml
@@ -12,7 +12,7 @@
                 <h:form id="form"> 
                     <p:panel  id="PanelTotal" header="Salud Ocupacional" style="position: absolute; width: 335px; height: 365px; left: 300px; top: 100px;text-align: left" >  
                         <fieldset style="position: absolute; left: 10px; top: 40px; width: 300px; height: 280px; border-radius: 10px; ">       </fieldset>
-                        <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 50px;left: 20px" value="[Factores de Riesgo...]"></p:commandButton>
+                        <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 50px;left: 20px" action="socondiciontrabajo" value="[Factores de Riesgo...]"></p:commandButton>
                         <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 90px;left: 20px" value="[Panorama...]"></p:commandButton>
                         <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 130px;left: 20px" value="[Reportes Salud Ocupacional...]"></p:commandButton>
                         <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 170px;left: 20px" value="[Inspecciones...]"></p:commandButton>
