--- a/DesignerRHN/DesignerRHN-war/web/vigenciatalla.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/vigenciatalla.xhtml
@@ -66,7 +66,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer" >
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" id="fooparentesco" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" action="tipotalla" id="fooparentesco" value=""/>
                                     </f:facet>
                                 </p:column>
 
